Logic to ensure modal never goes offscreen when clicked on edges.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -110,9 +110,8 @@
   gap: 10px;
   padding: 1rem;
   background-color: #1a1928f1;
-  border-radius: 1rem 1rem 0 1rem;
   border: 1px solid #888888b1;
-  width: fit-content;
+  width: 200px;
 }
 
 /* The Close Button */
